<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>



    <group android:checkableBehavior= "single" >

        <item android:id="@+id/informacionAplicacion"
              android:title="@string/informacionSobreAplicacion"/>

        <item android:id="@+id/centrosParaDonacion"
              android:title="@string/centrosParaDonacion"/>
        <item android:id="@+id/realizarDonacion"
              android:title="@string/realizarDonacion"/>
        <item android:id="@+id/donacionesRealizadas"
              android:title="@string/donacionesRealizadas"/>



    </group>

</menu>
